# JSON2YOLO

./: pyproject.toml
json2yolo/: general_json2yolo.py  labelbox_json2yolo.py  test.py
