[tool.poetry]
name = "json2yolo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
opencv-python = ">=4.1.2"
pillow = "^10.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
